registry/backup/back-registry-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: registry-route
  namespace: default
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`registry.sillycat.net`) && PathPrefix(`/v2`)
    kind: Rule
    services:
      - name: registry
        port: 5000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: registry-route
  namespace: default
spec:
  entryPoints:
  - web
  routes:
  - match: HostSNI(`registry.sillycat.net`)
    kind: Rule
    services:
      - name: registry
        port: 5000
